[gd_scene load_steps=5 format=3 uid="uid://d5l2m2e8q2x4"]

[ext_resource type="Script" path="res://scripts/ui/settings/settings_ui.gd" id="1_u2sd2"]
[ext_resource type="PackedScene" uid="uid://xmhpn38awq6d" path="res://scenes/menu_button.tscn" id="2_62b7l"]
[ext_resource type="PackedScene" uid="uid://ctdhbbmiflojf" path="res://scenes/settings/accessibility_settings_panel.tscn" id="3_3u03r"]
[ext_resource type="PackedScene" uid="uid://bo1bwedhgdekd" path="res://scenes/settings/audio_settings_panel.tscn" id="4_6x2d0"]

[node name="settings_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2sd2")

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="menu_buttons" type="VBoxContainer" parent="margin_container"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="accessibility_settings_button" parent="margin_container/menu_buttons" instance=ExtResource("2_62b7l")]
layout_mode = 2
text = "Accessibility"
script = null

[node name="audio_settings_button" parent="margin_container/menu_buttons" instance=ExtResource("2_62b7l")]
layout_mode = 2
text = "Audio"
script = null

[node name="spacer" type="Control" parent="margin_container/menu_buttons"]
layout_mode = 2
size_flags_vertical = 3

[node name="back_button" parent="margin_container/menu_buttons" instance=ExtResource("2_62b7l")]
layout_mode = 2
text = "Back"
script = null

[node name="accessibility_settings_panel" parent="." instance=ExtResource("3_3u03r")]
visible = false
layout_mode = 1
script = null

[node name="audio_settings_panel" parent="." instance=ExtResource("4_6x2d0")]
visible = false
layout_mode = 1
script = null

[connection signal="uis_emptied" from="." to="." method="_on_uis_emptied"]
[connection signal="pressed" from="margin_container/menu_buttons/accessibility_settings_button" to="." method="_on_accessibility_settings_button_pressed"]
[connection signal="pressed" from="margin_container/menu_buttons/audio_settings_button" to="." method="_on_audio_settings_button_pressed"]
[connection signal="pressed" from="margin_container/menu_buttons/back_button" to="." method="_on_back_button_pressed"]
